--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -89,6 +89,10 @@
         max-width: 480px;
         padding: 20px 15px 0;
         margin: 0 auto;
+        &--large {
+          max-width: unset;
+          padding: 30px;
+        }
         .reader {
           display: flex;
           align-items: center;
@@ -150,6 +154,19 @@
           border-top: 1px solid $orange;
           padding: 20px 0;
           margin-top: 20px;
+          position: relative;
+          &--unbox {
+            border: none;
+            padding: 0;
+            margin-top: 0;
+          }
+          &__heading {
+            border-bottom: 1px solid $orange;
+            font-size: 20px;
+            padding-top: 20px;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+          }
           &__group {
             display: flex;
             justify-content: space-between;
@@ -172,6 +189,132 @@
                 padding: 8px 10px;
                 @include addPrefix(appearance, none);
               }
+            }
+          }
+          &__btn {
+            background: $orange;
+            border-radius: 100px;
+            color: $white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            max-width: 120px;
+            height: 30px;
+            margin: 20px auto 0;
+          }
+          &__back {
+            color: $orange;
+            width: 20px;
+            height: 20px;
+            position: absolute;
+            top: -20px;
+            left: 0;
+            @include transition_c(none);
+            svg {
+              width: 100%;
+            }
+          }
+        }
+        .option {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          &__btn {
+            background: $orange;
+            border-radius: 100px;
+            color: $white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: calc(50% - 10px);
+            height: 40px;
+            @include transition_c(none);
+          }
+        }
+        .card {
+          position: relative;
+          &__btn {
+            color: $orange;
+            width: 20px;
+            height: 20px;
+            position: absolute;
+            top: -20px;
+            left: 0;
+            @include transition_c(none);
+            svg {
+              width: 100%;
+            }
+          }
+          &__heading {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            &--reversed .img {
+              @include tranform_c(rotate(180deg));
+            }
+            .img {
+              width: 100%;
+              max-width: 60px;
+              img {
+                width: 100%;
+              }
+            }
+            .info {
+              padding-left: 15px;
+              p {
+                font-size: 18px;
+                font-weight: bold;
+              }
+            }
+          }
+          &__info {
+            border: 1px solid $orange;
+            border-radius: 5px;
+            padding: 10px;
+            margin-top: 30px;
+          }
+        }
+        .results {
+          position: relative;
+          &__title {
+            font-size: 18px;
+            font-weight: bold;
+            padding-bottom: 10px;
+            margin-bottom: 15px;
+            &::first-letter {
+              text-transform: uppercase;
+            }
+          }
+          &__item {
+            display: flex;
+            justify-content: space-between;
+            padding-top: 20px;
+            .heading {
+              width: 160px;
+              text-align: center;
+              .img {
+                &--reversed {
+                  @include tranform_c(rotate(180deg));
+                }
+                img {
+                  width: 100%;
+                }
+              }
+              .info {
+                p {
+                  font-weight: bold;
+                  margin-top: 8px;
+                  line-height: 22px;
+                }
+                span {
+                  font-size: 13px;
+                  line-height: 18px;
+                }
+              }
+            }
+            .content {
+              width: calc(100% - 180px);
             }
           }
         }
