--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -115,6 +115,30 @@
         top: 15px;
         right: 15px;
       }
+      .group {
+        border-bottom: 1px solid $grey-light;
+        display: flex;
+        height: 48px;
+        padding: 10px 15px;
+        position: relative;
+        button {
+          border-radius: 100px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 50%;
+          &.active {
+            background: rgba($color: $orange, $alpha: 0.2);
+          }
+          img {
+            width: 20px;
+          }
+          span {
+            font-size: 14px;
+            padding-left: 8px;
+          }
+        }
+      }
       a {
         display: flex;
         align-items: center;
@@ -198,8 +222,8 @@
         color: $white;
         position: relative;
         svg {
-          &.fa-bell {
-            width: 22px;
+          &.fa-dice {
+            width: 34px;
           }
           &.fa-shopping-cart {
             width: 30px;
@@ -357,7 +381,7 @@
     .search {
       width: auto;
       padding: 0;
-      right: 146px;
+      right: 158px;
       form {
         input {
           width: 0;
